--- a/V_2_textmining.ipynb
+++ b/V_2_textmining.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMR0W6w9XxWSnTjwU183X9b",
+      "authorship_tag": "ABX9TyO4FFKVqJ1VRQeyUeRJzj7n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "-ga9blBPratV"
       },
@@ -78,9 +78,9 @@
           "height": 73
         },
         "id": "8oAIiC-95IOR",
-        "outputId": "80af9448-2c4e-4a4b-96e4-50f3d37c2319"
+        "outputId": "a71b3d98-7c29-4940-e583-cadaf1672102"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -90,9 +90,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-45a89027-c354-4e60-b404-691b7f8d3c04\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-bfb2226b-fefe-4b9b-8c1f-9c880a8a3df0\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-45a89027-c354-4e60-b404-691b7f8d3c04\">\n",
+              "     <output id=\"result-bfb2226b-fefe-4b9b-8c1f-9c880a8a3df0\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -310,7 +310,7 @@
       "metadata": {
         "id": "afT0DoJNkJjk"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
         "id": "MW2htKSTnkxf",
         "outputId": "7fde3c18-1d4c-4a93-d7b6-6a7e07c96183"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,9 +739,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SASrWKbQ_ere",
-        "outputId": "f2841cdb-c649-453b-8228-516b12728480"
+        "outputId": "ce134946-32f2-42f3-ad4a-e96993e2d5d2"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +754,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -777,9 +777,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rsH1spqaEJBh",
-        "outputId": "842596c2-abfa-4c26-b565-3cfbb718444a"
+        "outputId": "89e91b1c-1f78-4d26-b6d5-4fcbcaf9cebc"
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +789,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 11
         }
       ]
     },
@@ -803,9 +803,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1J_K2RmAEMN_",
-        "outputId": "95a2a574-5106-482b-982d-aef1405b13fa"
+        "outputId": "9c1cb35c-ddce-4fc7-d4dc-9f1b05aa2571"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -842,17 +842,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dm3xHLc-EzfB",
-        "outputId": "b748e16e-da09-41d3-c4ac-4af9e908e6a8"
+        "outputId": "e6b8f57e-9828-4ff0-db7d-e1714d8c4cd2"
       },
-      "execution_count": 55,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['Empresa: JARAMILLO PATIÑO MARIA VICTORIA\\nNit:  32317276\\nContacto: JARAMILLO PATIÑO MARIA VICTORIA\\nCédula:  32317276 \\nTels de contacto: 31 7190080\\nCorreo, maviljapa@hotmail.com\\nDirección de Servicio:CL 74 CR 64 B -32\\nMunicipio/Ciudad: MEDELLÍN\\nBarrio (Aplica par Regionales): Caribe\\nId: 900ac178-9c62-43b6-aba0-29789ff5f2de\\nLogin: mgrajalp\\nNombre del Asesor: Mariana Grajales Posada\\nCódigo del Asesor:\\nSac Pymes \\nDescripción exacta de la Queja Servicio: Usuario se comunica donde indica que tubo una migración de cobre a análoga y les están cobrando los servicios pero ella indica que no está llegando la factura por 22.500 muy puntual, ella indica que ha pagado facturas muy altas aproximadamente de 300.000 y no sabe debido a que si no contaban con este servicio.'\n",
-            " 'NOMBRE CLARA PATRICIA ROJAS GAÑAN_x000D_\\nCEDULA 33992780_x000D_\\nOBSERVACION CLIENTE SE ACERCA A LA OFICINA MUY MOLESTA  EN LE FORMATO ADJUNTO SE EXPLICA EL CASO POR FAVOR REVISAR DOCUMENTO EN EL QUE SE DESCRIBE LA PETICION'\n",
-            " '_x000D_\\nQueja Factura APC:_x000D_\\n_x000D_\\nDescripcion detallada:_x000D_\\nTelefono de contacto:3157807547_x000D_\\nCelular:3157807547_x000D_\\nMotivo del reclamo: PAGO DE DOS SERVICIOS EN UNA MISMA CASA_x000D_\\nArgumento del Usuario:EL USUARIO SE QUEJA POR TENER QUE PAGAR DOS FACTURACIONES CUAN DO ELLA HIZO EL RETIRO Y EL FUNCIONARIO PRESENCIAL FUE EL QUE NO CANCELO EL SERVICIO ANTERIOR'\n",
+            " 'NOMBRE CLARA PATRICIA ROJAS GAÑAN\\nCEDULA 33992780\\nOBSERVACION CLIENTE SE ACERCA A LA OFICINA MUY MOLESTA  EN LE FORMATO ADJUNTO SE EXPLICA EL CASO POR FAVOR REVISAR DOCUMENTO EN EL QUE SE DESCRIBE LA PETICION'\n",
+            " '\\nQueja Factura APC:\\n\\nDescripcion detallada:\\nTelefono de contacto:3157807547\\nCelular:3157807547\\nMotivo del reclamo: PAGO DE DOS SERVICIOS EN UNA MISMA CASA\\nArgumento del Usuario:EL USUARIO SE QUEJA POR TENER QUE PAGAR DOS FACTURACIONES CUAN DO ELLA HIZO EL RETIRO Y EL FUNCIONARIO PRESENCIAL FUE EL QUE NO CANCELO EL SERVICIO ANTERIOR'\n",
             " ...\n",
             " 'Cancelar linea por robo Hechos en que fundamenta su petición|| cancelar linea ya que hurtaron el celuylar '\n",
             " 'ID LLamada: 12615328\\nAsesor que realiza la solicitud: ahenaoru\\nNombre de quién llama: Maria Cristina Coronell Pimienta\\nNúmero de CC de quién llama: 32610034\\nAutoriza que la notificación de su PQR se realice por correo electrónico?: SI\\nCorreo para envío de respuesta: mcriscor_p@hotmail.com\\nAutoriza que la respuesta le sea enviada por el servicio de mensajería Física?: NO\\nNúmero de Contácto: 3013895231\\nMóvil del reclamo o inconveniente: 3013895231\\nPor qué no se brindó SPC?: a petición del usuario\\nMotivo de Petición: Otro tipo de Peticion\\nRequerimiento: Recurso/ roaming internacional/ facturación Requiero revocar el cobro del cargo adicional por el servicio de Romming Internacional en la factura del 24 de enero al 24 de febrero de 2023. Ya que ese servicio fue utilizado en el periodo del 24 de diciembre al 4 de enero de 2023, el cual pertenece al plan ilimitado de $100 mil . El cual tome por dos meses de noviembre y diciembre y no es justo que me cobren adicional ese valor. Además cuando tomé el plan ilimitado de 100 mil en noviembre, claramente me indicaron que incluía el servicio de Romming gratis. Hasta pregunté el costo por fuera del plan que yo tenia de 50 mil y me dijeron que costaba $7.500 por día y eso es justo lo que me están cobrando 10 días de uso del servicio de Romming del 24 de noviembre al 4 de enero de 2023 a razón de 7.500. Entonces para que pague durante dos meses el plan ilimitado de 100 mil. Para que ahora me cibren 89 mil incluyendo el iva por el servicio de Romming. Y no es consumo adicional como me respondieron en la respuesta del reclamo. Están abusando de su posición dominante y me están generando un perjuicio económico. Solicito se revoque ese cobro y no me suspendan el servicio. De no serlo Solicito la cancelación de mi plan y mi traslado a otro operador. Ácudo al Recurso de Reposición y en Subsidio de Apelación ante la SIC sobre la respuesta del radicado CUN 4331-23-0000037546'\n",
@@ -864,6 +864,125 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###Agregar columna \"meaning\" en un array, despues almacenarla en una variable \"b\".\n"
+      ],
+      "metadata": {
+        "id": "G88lmKNy_04O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=y.meaning.unique()\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vC-l0OvK_0ZN",
+        "outputId": "f42f15ea-5390-4366-d43d-af94ff1e55d9"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Activación / desactivación de servicios adicionales'\n",
+            " 'Activar / desactivar número privado'\n",
+            " 'Actualizar datos cliente / contrato' 'Aplicación de Pagos'\n",
+            " 'Bloqueo / desbloqueo por Robo / pérdida' 'Bloqueo/ Desbloqueo de imei'\n",
+            " 'Bloqueo/ Desbloqueo de imei duplicado' 'Cambio de chip'\n",
+            " 'Cambio de Ciclo' 'Cambio de domicilio' 'Cambio de número'\n",
+            " 'Cambio de Número' 'Cambio de Suscriptor' 'Cambio equipo a Wifi'\n",
+            " 'Cancelación no realizada' 'Cesión de contrato'\n",
+            " 'Crear/ Retirar-Descuento' 'Crear/ Retirar-Serv Suscrito'\n",
+            " 'Devolución de equipo por garantía' 'Devolución Equipos'\n",
+            " 'Duplicado de factura' 'Gestión Central de Riesgo'\n",
+            " 'Gestión de pedidos inconsistentes PUMED' 'Habeas data'\n",
+            " 'Inclusión / exclusión listas negras' 'Información factura'\n",
+            " 'Información fallas en servicio' 'Información habeas data'\n",
+            " 'Jerarquias de Cuenta' 'Movimiento interno de redes'\n",
+            " 'Orden de Reconexión' 'Paz y salvo' 'Petición Troncal SIP Móvil'\n",
+            " 'Peticiones ATP corporativo' 'Portabilidad Numérica'\n",
+            " 'Reconfiguración de oferta' 'Reintegro de dinero'\n",
+            " 'Solicitud de Activación de Líneas' 'Solicitud de soportes'\n",
+            " 'Solicitud detalles de consumo' 'Solicitudes citofonía virtual'\n",
+            " 'Solicitudes de cartera' 'Solicitudes REDIN' 'Solicitudes roaming'\n",
+            " 'Suspe/Recon por suscriptor' 'Tramitar Cambio Tecnología'\n",
+            " 'Tramitar Empaquetamiento' 'Tramitar Grabación'\n",
+            " 'Transferencia de pagos y ajustes' 'Unificar/Separar Producto'\n",
+            " 'Cobro de conexión' 'Cobro posterior a la cancelación'\n",
+            " 'Cobro posterior a la portación numérica'\n",
+            " 'Cobro posterior al cambio a prepago' 'Suplantación'\n",
+            " 'Garantía de equipo terminal' 'Inconformidad por cobros no acordados'\n",
+            " 'Inconformidad por reporte a centrales de riesgo'\n",
+            " 'Inconsistencia en pagos' 'Incremento tarifario'\n",
+            " 'No autorización para roaming' 'No autorización para SMS'\n",
+            " 'No reconoce el consumo' 'No traslado a nuevo domicilio' 'Operadores'\n",
+            " 'Servicios no solicitados' 'Solicitud de compensación por fallas'\n",
+            " 'Adecuación de Redes/Postes' 'Daños ocasionados por trabajo'\n",
+            " 'Inconf. Act - Desact Serv Supl' 'Inconf. Act. Lineas o Equipos'\n",
+            " 'Inconformidad con la venta' 'Inconformidad con SMS publicitarios'\n",
+            " 'Insatisfacción por trabajo realizado' 'Medios de atención al usuario'\n",
+            " 'Oportunidad en entrega de la factura' 'Quejas equipos por Bandas'\n",
+            " 'Quejas equipos por Hurto' 'Quejas equipos por Registro'\n",
+            " 'Quejas habeas data' 'Ajustes por Cambio de Plan'\n",
+            " 'Ajustes por Cancelación de Servicios' 'Asignacion de Recursos'\n",
+            " 'Desconciliaciones' 'Descuentos' 'Factura Manual' 'Intereses por Mora '\n",
+            " 'Ofertas no Configuradas' 'Ofertas no aplicadas'\n",
+            " 'Solicitud de financiación' 'Inconformidad con financiación'\n",
+            " 'Cobro posterior a la portación' 'Portabilidad numérica'\n",
+            " 'Ofertas especiales' 'Servicios de autogestión' 'Paz y Salvo'\n",
+            " 'Cobro por operadores' 'Reactivar Línea' 'Cambio de plan'\n",
+            " 'Migración a Prepago' 'Estado de Cuenta' 'Centrales de Riesgo' 'Roaming'\n",
+            " 'Publicidad engañosa' 'SMS Promocionales' 'Envio de factura'\n",
+            " 'Suscripciones' 'Pago no aplicado' 'Servicios Prepago' 'PRIME' 'Deezer'\n",
+            " 'Prepago' 'Agencias de Cobranza' 'PORT IN' 'PORT OUT' 'Traslado'\n",
+            " 'Suspensiones' 'Retiro no oportuno' 'Reporte a centrales de riesgo'\n",
+            " 'Recuperación Equipos' 'Recuperación de cobro' 'Plan errado'\n",
+            " 'Pago no aplicado / Pago Errado' 'Migra/cambioTec' 'Mala asesoria'\n",
+            " 'Hurto de cable' 'Estrato' 'Error Sistema'\n",
+            " 'Empaqueta/Desempaqueta Servicios' 'Descuento no aplicado'\n",
+            " 'Depuración saldos a favor y saldos menores' 'Decodificador' 'Daños'\n",
+            " 'Covid-19' 'Consumos terceros' 'Cobros no recurrentes'\n",
+            " 'cobros no recurrentes' 'Cobros adicionales' 'Cobro de conexión '\n",
+            " 'Canales adicionales' 'Portabilidad' 'Cambio de plan errado'\n",
+            " 'Consumos adicionales' 'Descuento/Promocion' 'Cobro errado CB'\n",
+            " 'Error sistema/indisponibilidad' 'Recursos no entregados'\n",
+            " 'cobros duplicados' 'Transferencia/Pagos' 'prestamo'\n",
+            " 'Suscripciones paquetes' 'Cobros duplicados' 'Recursos'\n",
+            " 'Proceso no ejecutado/Mal ejecutado' 'Vigencia recursos'\n",
+            " 'Comprar paquetes' 'Error Sistema/Indisponibilidad' 'DP (QF- PT-QS) ']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Agregar columna \"word\" en un array, despues almacenarla en una variable \"c\"."
+      ],
+      "metadata": {
+        "id": "hZGJuVKUAqwA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=y.word.unique()\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "EzY2U-HAA7EJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Crear blucle \"for\" para recorrer el arreglo"
       ],
       "metadata": {
@@ -871,15 +990,54 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "for i in range(a.shape[0]):"
+        "### Creacion de funcion  \"Textmining\" que va a recibir como parametro el arrego  almacenado en la variable \"a\", la funcion \"Textmining\" por medio de un bucle for debera recorrer el arreglo , si encuentra en el recorrido palabras que tengan relacion con el diccionario , me almacenara en \"keywords\" la palabra clave que despues debera colocarse en la columna \"TEXTMINING\""
       ],
       "metadata": {
-        "id": "7s0lqFpXbAxR"
+        "id": "Ag5YFr6_9WZo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Textmining(b):\n",
+        " keywords=\"\"\n",
+        " for i in b:\n",
+        "  if(any(b)==\"cliente\"):\n",
+        "     keywords=\"usuario\"\n",
+        "  elif (any(b)==\"retiro\"):\n",
+        "     keywords=\"cancelaciones\"\n",
+        "  elif (any(b)==\"\"):\n",
+        "     \n",
+        " \n",
+        "  \n",
+        "\n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "7s0lqFpXbAxR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "outputId": "85e17411-3f13-4e84-d9a4-3bf3f2f4c7e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-472908ac1165>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return keywords=\"usuario\"\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
