--- a/V_2_textmining.ipynb
+++ b/V_2_textmining.ipynb
@@ -972,7 +972,11 @@
         "id": "Ag5YFr6_9WZo"
       },
       "source": [
-        "### Creacion de funcion  \"Textmining\" que va a recibir como parametro el arrego  almacenado en la variable \"a\", la funcion \"Textmining\" por medio de un bucle for debera recorrer el arreglo , si encuentra en el recorrido palabras que tengan relacion con el diccionario alamcenado en la variable \"c\" , se almacenara el resultado en el arreglo \"keywords\",la idea es recorrer el arreglo keywords y que el resultado se vaya almacenando en la columna \"TEXTMINING\" ."
+        "### Creacion de funcion  \"Textmining\" que va a recibir como parametro el arrego  almacenado en la variable \"a\".\n",
+        "\n",
+        "###La funcion \"Textmining\" por medio de un bucle \"for\" debera recorrer el arreglo , si encuentra en el recorrido palabras que tengan relacion con el diccionario almacenado en la variable \"c\" , se almacenara el resultado en el arreglo \"keywords\".\n",
+        "\n",
+        "###La idea es recorrer el arreglo keywords y que el resultado se vaya almacenando en la columna \"TEXTMINING\" ."
       ]
     },
     {
@@ -998,7 +1002,7 @@
       ],
       "source": [
         "def Textmining(b):\n",
-        " keywords=\"\"\n",
+        " keywords=[]\n",
         " for i in b:\n",
         "  if(any(b)==c):\n",
         "     keywords=c\n",
@@ -1053,7 +1057,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsVxSYAewtOvlZ5YO8pCcj",
+      "authorship_tag": "ABX9TyPsIzfDlAYUZsjWSEBFdkfs",
       "include_colab_link": true
     },
     "kernelspec": {
